--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DragonClient Module Manager</title>
+  <title>DragonWare Module Manager</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/1422487512311660615/1422508866956034189/raw.png?ex=68dcee1e&is=68db9c9e&hm=0084d676f511ecd64c8fe3f018290f1c32a803413db5924a9b1b821c3a7214fb&" type="image/png">
   <style>
     :root{
@@ -95,9 +95,9 @@
     <div class="wrap hero">
       <div class="heroTop">
         <img class="logo" src="https://cdn.discordapp.com/attachments/1422487512311660615/1422508866956034189/raw.png?ex=68dcee1e&is=68db9c9e&hm=0084d676f511ecd64c8fe3f018290f1c32a803413db5924a9b1b821c3a7214fb&.png" alt="logo" />
-        <h1 class="title">ᴅʀᴀɢᴏɴᴄʟɪᴇɴᴛ ᴍᴏᴅᴜʟᴇᴍᴀɴᴀɢᴇʀ</h1>
+        <h1 class="title">ᴅʀᴀɢᴏɴᴡᴀʀᴇ ᴍᴏᴅᴜʟᴇᴍᴀɴᴀɢᴇʀ</h1>
       </div>
-      <p class="subtitle">ᴄᴇɴᴛʀᴀʟ ʜᴜʙ ᴏꜰ ᴅʀᴀɢᴏɴᴄʟɪᴇɴᴛ ᴍᴏᴅᴜʟᴇꜱ. ᴄᴏɴꜰɪɢᴜʀᴇ, ᴇxᴘᴏʀᴛ ᴀɴᴅ ʟɪɴᴋ ɪᴛ ᴡɪᴛʜ ᴛʜᴇ ʙᴏᴛ.</p>
+      <p class="subtitle">ᴄᴇɴᴛʀᴀʟ ʜᴜʙ ᴏꜰ ᴅʀᴀɢᴏɴᴡᴀʀᴇ ᴍᴏᴅᴜʟᴇꜱ. ᴄᴏɴꜰɪɢᴜʀᴇ, ᴇxᴘᴏʀᴛ ᴀɴᴅ ʟɪɴᴋ ɪᴛ ᴡɪᴛʜ ᴛʜᴇ ʙᴏᴛ.</p>
       <div class="mini">
         <h3>ᴄʟɪᴄᴋɢᴜɪ ᴘʀᴇᴠɪᴇᴡ</h3>
         <div class="miniLine"></div>
@@ -329,3 +329,4 @@
 </body>
 
 </html>
+
